fixed some layout problems

--- a/assets/themes/DIYtheme/css/screen.css
+++ b/assets/themes/DIYtheme/css/screen.css
@@ -46,7 +46,6 @@ img { -ms-interpolation-mode:bicubic; }
 html>body { font-size:16px; }
 p {
     margin-top:0.5em;
-    text-align: justify;
 }
 
 a { text-decoration: none; color: #48A9E7; }
